--- a/addon/templates/components/slider-handle.hbs
+++ b/addon/templates/components/slider-handle.hbs
@@ -1,2 +1,6 @@
 <div class="handle-cover"></div>
-<div class="slider-value">{{value}}</div>
+<div class="slider-value">
+    <div class="value-mover">
+        {{value}}
+    </div>
+</div>
