Updated demo application and test setup
1. Demo setup with basic slider using dummy app
2. Integration testing using ember qunit

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,30 @@
 <h2 id="title">Ember slider demo</h2>
-{{ember-slider config=options}}
+This page provides an interface to look at the various slider options available.
+<h3>Basic 0 to 100 slider</h3>
+<div class="code">
+    <h5>Code</h5>
+    {{code-snippet name="basic-slider-options.js"}}
+    {{code-snippet name="basic-slider-options.hbs"}}
+</div>
+<div class="preview">
+    <h5>Preview</h5>
+    <div class="slider-container">
+        {{ember-slider config=options}}
+    </div>
+    <p>This is a basic slider setup. Try clicking on the below buttons to toggle value display and change the look of the slider</p>
+    <div 
+        class="demo-button" 
+        {{action 'toggleValueDisplay'}} 
+        onmousedown={{action 'addActiveClass'}} 
+        onmouseup={{action 'removeActiveClass'}}>
+        Toggle value display
+    </div>
+    <div 
+        class="demo-button" 
+        {{action 'toggleSliderType'}} 
+        onmousedown={{action 'addActiveClass'}} 
+        onmouseup={{action 'removeActiveClass'}}>
+        Toggle slider type
+    </div>
+</div>
 {{outlet}}
