--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -42,7 +42,8 @@ body {
             @include transform(translateX(-105%));
             @include transition(transform .3s);
             .value-mover {
-                border: 1px solid rgba(0,0,0,.5);
+                background: #fff;
+                border: 1px solid #444;
                 border-radius: 3px;
                 position: relative;
                 &:after {
@@ -51,7 +52,7 @@ body {
                     
                     border-top: 7px solid transparent;
                     border-right: 0;
-                    border-left: 10px solid rgba(0,0,0,.5);
+                    border-left: 10px solid #444;
                     border-bottom: 7px solid transparent;
                     
                     position: absolute;
@@ -69,7 +70,7 @@ body {
                         
                         border-top: 7px solid transparent;
                         border-left: 0;
-                        border-right: 10px solid rgba(0,0,0,.5);
+                        border-right: 10px solid #444;
                         border-bottom: 7px solid transparent;
 
                         left: unset;
