--- a/addon/templates/components/ember-slider.hbs
+++ b/addon/templates/components/ember-slider.hbs
@@ -1,6 +1,11 @@
 <div class="slider-path">
-    <div class="slider-pseudo-path"></div>
-    <div class="slider-color-filler"></div>
+    <div class="slider-pseudo-path">
+        <div class="slider-color-filler"></div>
+    </div>
     {{slider-handle value=value onStart=(action 'handleMoveStart')}}
 </div>
-<div class="slider-color-filler-closed"></div>
+<div class="slider-pseudo-path-closed">
+    <div class="filler-guide">
+        <div class="slider-color-filler-closed"></div>
+    </div>
+</div>
