Minor tweaks to configuration options & README

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -14,7 +14,7 @@ body {
 
     @include box-sizing();
     position: relative;
-    &.no-value {
+    &.hide-value {
         .slider-value {
             display: none;
         }
