Likert points display and movement logic

--- a/addon/templates/components/ember-slider.hbs
+++ b/addon/templates/components/ember-slider.hbs
@@ -9,3 +9,8 @@
         <div class="slider-color-filler-closed"></div>
     </div>
 </div>
+<div class="likert-points">
+    {{#each likertPoints as |point|}}
+        <div class="likert-point {{if (lte point.left _percentage) 'active'}}" style="left: {{point.left}}%;"></div>
+    {{/each}}
+</div>
