--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -64,11 +64,18 @@ body {
             @include transition(left .3s);
         }
     }
+    &:not(.likert-enabled) {
+        cursor: pointer;
+    }
+    &.likert-enabled {
+        .likert-point {
+            cursor: pointer;
+        }
+    }
     .slider-path {
-        width: calc(100% - 34px);
+        width: calc(100% - #{$handle-width + $handle-padding});
         position: relative;
         left: 15px;
-        cursor: pointer;
     }
     .slider-color-filler, .slider-pseudo-path {
         background-color: $slider-filler-color;
@@ -78,7 +85,6 @@ body {
         margin-top: -2px;
         position: absolute;
         top: 50%;
-        cursor: pointer;
     }
     .slider-pseudo-path {
         background-color: $slider-path-color;
@@ -91,7 +97,6 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        cursor: pointer;
     }
     .slider-pseudo-path-closed {
         background-color: $slider-path-color;
@@ -129,8 +134,6 @@ body {
         left: 0;
         z-index: 1;
 
-        cursor: pointer;
-
         &:before {
             content: '';
             width: $handle-width * 5;
@@ -165,9 +168,31 @@ body {
         .slider-value {
             position: relative;
             z-index: 3;
+            cursor: pointer;
             .value-mover {
                 padding: 2px;
                 display: inline;
+            }
+        }
+    }
+    .likert-points {
+        width: calc(100% - #{$handle-width + $handle-padding});
+        position: absolute;
+        left: 0;
+        top: 0;
+        .likert-point {
+            background: $slider-handle-color;
+            height: $handle-width + $handle-padding;
+            width: $handle-width + $handle-padding;
+            border-radius: $handle-width + $handle-padding;
+            // margin-left: -($handle-width + $handle-padding);
+            box-shadow: 0px 0px 2px #555 inset;
+            position: absolute;
+            &:nth-child(1) {
+                margin-left: 0;
+            }
+            &.active {
+                background: $slider-filler-color;
             }
         }
     }
