--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -3,15 +3,28 @@
 body {
     font-family: 'Roboto', sans-serif;
 }
-
+h2 {
+    color: #ff6b43;
+}
 .demo {
     clear: both;
+    border-top: 1px solid #ccc;
+    margin-top: 30px;
+    h3 {
+        color: #ff6b43;
+        margin: 10px 0;
+    }
 }
 
 .code, .preview {
     float: left;
     width: 45%;
     margin: 1%;
+    h5 {
+        color: #ff6b43;
+        text-transform: uppercase;
+        margin: 10px 0;
+    }
 }
 
 .demo-button {
@@ -30,5 +43,5 @@ body {
 
 .slider-container {
     width: 500px;
-    margin: 10px 0;
+    margin: 30px 0;
 }
