Lint errors fix for ember upgrade 3.15

--- a/addon/templates/components/ember-slider.hbs
+++ b/addon/templates/components/ember-slider.hbs
@@ -2,7 +2,7 @@
     <div class="slider-pseudo-path">
         <div class="slider-color-filler"></div>
     </div>
-    {{slider-handle value=value onStart=(action "handleMoveStart")}}
+    <SliderHandle value={{this.value}} onStart={{fn "handleMoveStart"}} />
 </div>
 <div class="slider-pseudo-path-closed">
     <div class="filler-guide">
@@ -11,12 +11,13 @@
 </div>
 <div class="likert-points">
     {{! template-lint-disable no-inline-styles style-concatenation quotes}}
-    {{#each likertPoints as |point|}}
+    {{#each this.likertPoints as |point|}}
         <div 
-          class="likert-point {{if (lte point.left _percentage) 'active'}}"
+          class="likert-point {{if (lte point.left this._percentage) 'active'}}"
           style="left: {{point.left}}%;"
         >
-            <div class="likert-label" style="min-width: {{mult likertDistance 3}}px;">{{point.label}}</div>
+            {{! template-lint-disable no-curly-component-invocation}}
+            <div class="likert-label" style="min-width: {{mult this.likertDistance 3}}px;">{{point.label}}</div>
         </div>
     {{/each}}
 </div>
