Workaround for broccoli error
Having .hbs and .js files at same directory caused broccoli throw error during build. Working around this by simply renaming the template file `basic-slider-options` to `basic-slider-options-template`. This will not break anything since those files are purely used only for snippets display.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -5,7 +5,7 @@ This page provides an overview of the basic slider options available.
     <div class="code">
         <h5>Code</h5>
         <CodeSnippet name="basic-slider-options.js" />
-        <CodeSnippet name="basic-slider-options.hbs" />
+        <CodeSnippet name="basic-slider-options-template.hbs" />
     </div>
     <div class="preview">
         <h5>Preview</h5>
@@ -38,7 +38,7 @@ This page provides an overview of the basic slider options available.
     <div class="code">
         <h5>Code</h5>
         <CodeSnippet name="likert-slider-options.js" />
-        <CodeSnippet name="basic-slider-options.hbs" />
+        <CodeSnippet name="basic-slider-options-template.hbs" />
     </div>
     <div class="preview">
         <h5>Preview</h5>
