--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -4,29 +4,29 @@ This page provides an overview of the basic slider options available.
     <h3>Basic 0 to 100 slider</h3>
     <div class="code">
         <h5>Code</h5>
-        <CodeSnippet name="basic-slider-options.js" />
-        <CodeSnippet name="basic-slider-options-template.hbs" />
+        <CodeSnippet @name="basic-slider-options.js" />
+        <CodeSnippet @name="basic-slider-options-template.hbs" />
     </div>
     <div class="preview">
         <h5>Preview</h5>
         <p>This is a basic slider setup. Try clicking on the below buttons to toggle value display and change the look of the slider</p>
         <div class="slider-container">
-            <EmberSlider config={{this.options}} />
+            <EmberSlider @config={{this.options}} />
         </div>
         <div 
           class="demo-button"
-          {{on "mousedown" (fn "addActiveClass")}}
-          {{on "mouseup" (fn "removeActiveClass")}}
-          {{on "click" (fn "toggleValueDisplay" this.options)}}
+          {{on "mousedown" (fn this.actions.addActiveClass)}}
+          {{on "mouseup" (fn this.actions.removeActiveClass)}}
+          {{on "click" (fn this.actions.toggleValueDisplay this.options)}}
           role="button"
         >
             Toggle value display
         </div>
         <div 
           class="demo-button"
-          {{on "mousedown" (fn "addActiveClass")}}
-          {{on "mouseup" (fn "removeActiveClass")}}
-          {{on "click" (fn "toggleSliderType" this.options)}}
+          {{on "mousedown" (fn this.actions.addActiveClass)}}
+          {{on "mouseup" (fn this.actions.removeActiveClass)}}
+          {{on "click" (fn this.actions.toggleSliderType this.options)}}
           role="button"
         >
             Toggle slider type
@@ -37,29 +37,29 @@ This page provides an overview of the basic slider options available.
     <h3>5 point likert slider</h3>
     <div class="code">
         <h5>Code</h5>
-        <CodeSnippet name="likert-slider-options.js" />
-        <CodeSnippet name="basic-slider-options-template.hbs" />
+        <CodeSnippet @name="likert-slider-options.js" />
+        <CodeSnippet @name="basic-slider-options-template.hbs" />
     </div>
     <div class="preview">
         <h5>Preview</h5>
         <p>This is a 5 point scale likert slider setup. Try clicking on the below buttons to toggle value display and change the look of the slider</p>
         <div class="slider-container">
-            <EmberSlider config={{this.likertOptions}} />
+            <EmberSlider @config={{this.likertOptions}} />
         </div>
         <div 
           class="demo-button"
-          {{on "mousedown" (fn "addActiveClass")}}
-          {{on "mouseup" (fn "removeActiveClass")}}
-          {{on "click" (fn "toggleValueDisplay" this.options)}}
+          {{on "mousedown" (fn this.actions.addActiveClass)}}
+          {{on "mouseup" (fn this.actions.removeActiveClass)}}
+          {{on "click" (fn this.actions.toggleValueDisplay this.likertOptions)}}
           role="button"
         >
             Toggle value display
         </div>
         <div 
           class="demo-button"
-          {{on "mousedown" (fn "addActiveClass")}}
-          {{on "mouseup" (fn "removeActiveClass")}}
-          {{on "click" (fn "toggleSliderType" this.options)}}
+          {{on "mousedown" (fn this.actions.addActiveClass)}}
+          {{on "mouseup" (fn this.actions.removeActiveClass)}}
+          {{on "click" (fn this.actions.toggleSliderType this.likertOptions)}}
           role="button"
         >
             Toggle slider type
