Testing ember gestures hammer dependecy error

--- a/blueprints/custom-slider/files/app/styles/___name__.scss
+++ b/blueprints/custom-slider/files/app/styles/___name__.scss
@@ -1,4 +1,4 @@
-@import "@love-open-source/ember-slider/styles/slider-mixin"
+@import "@love-open-source/ember-slider/styles/slider-mixin";
 
 body {
 	$class-list: <%= classList %>;
